--- a/app/views/prototypes/peter/answers-provider.html
+++ b/app/views/prototypes/peter/answers-provider.html
@@ -74,7 +74,7 @@
               Teachers
             </dt>
             <dd class="govuk-summary-list__value">
-              10
+              English 2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -85,10 +85,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-            Not filled manager
+            
             </dt>
             <dd class="govuk-summary-list__value">
-           1 
+           Business Administration 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -100,10 +100,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Not filled teacher
+              Level
             </dt>
             <dd class="govuk-summary-list__value">
-          2 
+          English Level 4
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -119,10 +119,10 @@
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Not filled support
+             
             </dt>
             <dd class="govuk-summary-list__value">
-              2
+              English Level 5
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -133,7 +133,21 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill manager
+              Level
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Business Administration  Level 3
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Time to fill English Level 4
             </dt>
             <dd class="govuk-summary-list__value">
               2 to 3 months
@@ -147,7 +161,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill teacher
+              Time to fill English Level 5
             </dt>
             <dd class="govuk-summary-list__value">
               2 to 3 months
@@ -161,10 +175,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill support
+              Time to fill English Level 3
             </dt>
             <dd class="govuk-summary-list__value">
-              2 to 3 months
+              Less than one month
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -175,10 +189,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult to fill manager
+              Filled - English Level 4
             </dt>
             <dd class="govuk-summary-list__value">
-              Easy
+              No
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -189,10 +203,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult to fill teacher
+              Filled - English Level 5
             </dt>
             <dd class="govuk-summary-list__value">
-              Easy
+              Yes - filled temporarily
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -203,10 +217,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult to fill support
+              Filled - Business Administration Level 3
             </dt>
             <dd class="govuk-summary-list__value">
-              Easy
+              Yes - filled temporarily
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -214,54 +228,6 @@
               </a>
             </dd>
           </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-            Difficult subjects
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Business and Administrative,
-Construction
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Business and Administrative
-
-            </dt>
-            <dd class="govuk-summary-list__value">
-              No experienced candidates
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Construction
-            </dt>
-            <dd class="govuk-summary-list__value">
-              No suitably qualified candidates
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          
 
 
         </dl>
