--- a/app/views/prototypes/peter/answers-provider.html
+++ b/app/views/prototypes/peter/answers-provider.html
@@ -103,7 +103,7 @@
               Level
             </dt>
             <dd class="govuk-summary-list__value">
-          English Level 4
+          English Level 4 - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -112,17 +112,14 @@
             </dd>
           </div>
 
-          
-        
-           
-          
+  
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              
             </dt>
             <dd class="govuk-summary-list__value">
-              English Level 5
+              English Level 5 - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -136,7 +133,7 @@
               Level
             </dt>
             <dd class="govuk-summary-list__value">
-              Business Administration  Level 3
+              Business Administration  Level 3 - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
