--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -113,6 +113,14 @@
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Classical Civilisation</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Computer science</th>
                     <td class="govuk-table__cell govuk-table__cell--numeric"></td>
