--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -115,7 +115,7 @@
 
 
                   <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header">Classical Civilisation</th>
+                    <th scope="row" class="govuk-table__header">Classical civilisation</th>
                     <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
