--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -287,7 +287,140 @@
               </h2>
             </div>
             <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-              <p class='govuk-body'>This is the content for Writing well for specialists.</p>
+              <table class="govuk-table">
+                
+                <thead class="govuk-table__head">
+                  <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header">Subject</th>
+                    <th scope="col" class="govuk-table__header govuk-table__header--numeric">Number of vacancies</th>
+                  </tr>
+                </thead>
+                <tbody class="govuk-table__body">
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Accounting and Finance</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Agriculture and Horticulture</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Animal Care</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Business Management and Administration</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Catering and Hospitality</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Construction, Planning and the Built Environment</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Crafts, Creative Arts and Design</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Design, Engineering and Manufacturing</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Digital / ICT</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Education and Childcare</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Education and Training</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Environmental</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Hair, Beauty and Aesthetics</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Health, Public Services and Care</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Law and Legal Services</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Media, Broadcast and Production</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Performing Arts</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Retail and Commercial Enterprise</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Science</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Sport, Leisure and Recreation</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Transport and Logistics</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+                  <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header">Travel and Tourism</th>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                  </tr>
+
+
+                </tbody>
+              </table>
             </div>
           </div>
           <div class="govuk-accordion__section ">
