--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -53,62 +53,61 @@
                 
                 <thead class="govuk-table__head">
                   <tr class="govuk-table__row">
-                    <th scope="col" class="govuk-table__header"></th>
-                    <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
-                    <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                    <th scope="col" class="govuk-table__header">Subject</th>
+                    <th scope="col" class="govuk-table__header govuk-table__header--numeric">Number of vacancies</th>
                   </tr>
                 </thead>
                 <tbody class="govuk-table__body">
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Ancient languages</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Archaeology</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Astronomy</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Art and design, history of art</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Accounting, business and economics</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                      <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Biology</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Chemistry</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Citizenship studies</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -116,76 +115,76 @@
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Classical civilisation</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Computer science</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Dance, drama and theatre</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Design, technology and engineering</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Electronics</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">English</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Environmental science</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Film and media studies</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Food preparation and nutrition</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Geography</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Geology</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -193,7 +192,7 @@
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">History
                     </th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -201,28 +200,28 @@
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Mathematics
                     </th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Modern foreign languages</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Music</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Physical education</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -230,21 +229,21 @@
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Philosophy
                     </th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Physics</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
 
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Politics</th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -252,7 +251,7 @@
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Psychology
                     </th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -260,7 +259,7 @@
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Religious studies
                     </th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                    
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
@@ -268,7 +267,7 @@
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header">Sociology
                     </th>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                   
                     <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                   </tr>
