--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -53,7 +53,7 @@
                     </span>
                   </h2>
                   <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
-                    A Levels...
+                    A levels and GCSE's
                   </div>
                 </div>
                 <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
@@ -281,7 +281,7 @@
                     </span>
                   </h2>
                   <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
-                    T levels...
+                    T levels, apprenticeship programmes
                   </div>
                 </div>
                 <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-2">
@@ -476,7 +476,7 @@
                       Other
                   </h2>
                   <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-3">
-                    SEN...
+                    Functional skills, SEN
                   </div>
                 </div>
                 <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
