--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -120,6 +120,14 @@
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
+
+                      <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">Classical studies</th>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                      </tr>
+                      
     
                       <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">Computer science</th>
@@ -491,65 +499,50 @@
                     </thead>
                     <tbody class="govuk-table__body">
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Entry level</th>
+                        <th scope="row" class="govuk-table__header">Functional Skills (English, Maths and IT)</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
     
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 1</th>
+                        <th scope="row" class="govuk-table__header">Life Skills</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
     
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 2</th>
+                        <th scope="row" class="govuk-table__header">Preparation for Work</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
     
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 3</th>
+                        <th scope="row" class="govuk-table__header">Supported Learning or Special Educational Needs learning provision</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
     
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 4</th>
+                        <th scope="row" class="govuk-table__header">ESOL</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
                       <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 5</th>
+                        <th scope="row" class="govuk-table__header">Community Learning</th>
                         <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                         <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
                       </tr>
-                      <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 6</th>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                      </tr>
+                      
     
-                      <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 7</th>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                      </tr>
+                      
     
-                      <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">Level 8</th>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                          <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                      </tr>
+                      
     
                     
                     </tbody>
