--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -563,7 +563,7 @@
   
   
 
-          <a href="explain-how-long" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-levels" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
