boxes input filled2

--- a/app/views/prototypes/peter/filled2.html
+++ b/app/views/prototypes/peter/filled2.html
@@ -44,106 +44,127 @@
             
             <br><br>
 
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 4</h2>
-            <div class="govuk-form-group">
-                    <fieldset class="govuk-fieldset">
-                      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> 
-                      </legend>
+            <h2 class="govuk-heading-m">English - Level 4</h2>
+            <table class="govuk-table">
+                
+              <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                  <th scope="col" class="govuk-table__header"></th>
+                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                </tr>
+              </thead>
+              <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Yes - filled permanently or as advertised</th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
 
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Yes - filled temporarily
+                  </th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
 
-                      <div class="govuk-radios">
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
-                          <label class="govuk-label govuk-radios__label" for="teachers">
-                            Yes - filled permanently or as advertised
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
-                          <label class="govuk-label govuk-radios__label" for="teachers-2">
-                            Yes - filled temporarily
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
-                          <label class="govuk-label govuk-radios__label" for="teachers-3">
-                            No
-                          </label>
-                        </div>
-                       
-                      </div>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">No</th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
+              </tbody>
+            </table>
+
+          <br><br>
                   
-                    </fieldset>
-                  </div>
-                     <br><br>
+            
+                
+                            <h2 class="govuk-heading-m">English - Level 5</h2>
+                            <table class="govuk-table">
+                              <thead class="govuk-table__head">
+                                <tr class="govuk-table__row">
+                                  <th scope="col" class="govuk-table__header"></th>
+                                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                                </tr>
+                              </thead>
+                                
+                              
+                              <tbody class="govuk-table__body">
+                                <tr class="govuk-table__row">
+                                  <th scope="row" class="govuk-table__header">Yes - filled permanently or as advertised</th>
+                                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                                </tr>
+                
+                                <tr class="govuk-table__row">
+                                  <th scope="row" class="govuk-table__header">Yes - filled temporarily
+                                  </th>
+                                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                                </tr>
+                
+                                <tr class="govuk-table__row">
+                                  <th scope="row" class="govuk-table__header">No</th>
+                                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <br><br>
+                
+                        
 
-                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">English - Level 5</h2>
-            <div class="govuk-form-group">
-                    <fieldset class="govuk-fieldset">
-                      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> 
-                      </legend>
+            <h2 class="govuk-heading-m">Business Administration - Level 3</h2><br>
+            <table class="govuk-table">
+              <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                  <th scope="col" class="govuk-table__header"></th>
+                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                </tr>
+              </thead>
+                                
+                              
+              <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Yes - filled permanently or as advertised</th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
 
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Yes - filled temporarily
+                  </th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
 
-                      <div class="govuk-radios">
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
-                          <label class="govuk-label govuk-radios__label" for="teachers">
-                            Yes - filled permanently or as advertised
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
-                          <label class="govuk-label govuk-radios__label" for="teachers-2">
-                            Yes - filled temporarily
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
-                          <label class="govuk-label govuk-radios__label" for="teachers-3">
-                            No
-                          </label>
-                        </div>
-                       
-                      </div>
-                  
-                    </fieldset>
-                  </div>
-                     <br><br>
-
-           
-
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Business Administration - Level 3</h2><br>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
-                <label class="govuk-label govuk-radios__label" for="teachers">
-                  Yes - filled permanently or as advertised
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
-                <label class="govuk-label govuk-radios__label" for="teachers-2">
-                  Yes - filled temporarily
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
-                <label class="govuk-label govuk-radios__label" for="teachers-3">
-                  No
-                </label>
-              </div>
-             
-            </div>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">No</th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
+              </tbody>
+            </table>
           
-            </div>
+            </div></div>
+
+            
         
           </fieldset>
         </div>
-  </div><br>
 
-
-  
-  
 
           <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
       Continue
@@ -151,7 +172,7 @@
        
  </div>
 </div>
-</div>
+</div></div>
         
 
 
