--- a/app/views/prototypes/peter/qualification-type.html
+++ b/app/views/prototypes/peter/qualification-type.html
@@ -70,7 +70,7 @@
 
           </label>
           <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-            For example, Apprenticeships, traineeshops, T levels
+            For example, Apprenticeships, traineeships, T levels
           </div>
         </div>
 
