--- a/app/views/prototypes/peter/add.html
+++ b/app/views/prototypes/peter/add.html
@@ -39,6 +39,9 @@
             
 <p>Tell us about any full-time, part-time or temporary staff. Don't include agency workers.
     </p><br>
+
+    <p>We don't use the names of your staff. We ask you to enter them here but this is to help you identify them while you complete this form.
+    </p><br>
   <div class="govuk-form-group">
   <label class="govuk-label" for="full-name">
     First names
