--- a/app/views/prototypes/peter/role.html
+++ b/app/views/prototypes/peter/role.html
@@ -50,25 +50,40 @@
             <label class="govuk-label govuk-checkboxes__label" for="waste">
               Manager
             </label>
-          </div>
+            <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+              Principal, Vice principal, CEO
+            </div>
+
+          </div><br>
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
             <label class="govuk-label govuk-checkboxes__label" for="waste-2">
               Teacher
             </label>
-          </div>
+
+            <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+              Someone who teachers or trains as the main part of their job
+            </div>
+          </div><br>
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
             <label class="govuk-label govuk-checkboxes__label" for="waste-3">
               Teaching support
             </label>
-          </div>
+
+            <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+              Teaching assistant, mentor,assessor
+            </div>
+          </div><br>
 
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
             <label class="govuk-label govuk-checkboxes__label" for="waste-2">
               Administration
             </label>
+            <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+              Those that support the delivery of teaching. HR, data officer
+            </div>
           </div>
         </div>
     
