--- a/app/views/prototypes/peter/vacancies-subject.html
+++ b/app/views/prototypes/peter/vacancies-subject.html
@@ -38,9 +38,9 @@
                 How many teacher vacancies did you have - by subject?
               </h1>
             </legend>
-            <!--<div id="citizenship-conditional-hint" class="govuk-hint">
-              Select all options that are relevant.
-            </div>-->
+            <div id="citizenship-conditional-hint" class="govuk-hint">
+            Add the number of teacher or training vacancies you had - next to their subjects in the list
+            </div>
             
             <br><br>
 
