--- a/app/views/prototypes/peter/highest-subject.html
+++ b/app/views/prototypes/peter/highest-subject.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What is the highest level of qualification they teach?
+        What is the highest qualification level they teach - in their main subject?
 
       </h1>
     </legend><br>
