--- a/app/views/prototypes/peter/highest-subject2.html
+++ b/app/views/prototypes/peter/highest-subject2.html
@@ -119,6 +119,26 @@
         </span>
       </div>
 
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Working towards a qualification
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          None
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
+      </div>
+
        <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
