--- a/app/views/prototypes/peter/maths.html
+++ b/app/views/prototypes/peter/maths.html
@@ -112,6 +112,17 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          None
+        </label>
+
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
+        </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Don't know
         </label>
 
