--- a/app/views/prototypes/peter/vacancies-levels.html
+++ b/app/views/prototypes/peter/vacancies-levels.html
@@ -38,9 +38,9 @@
                 What level were the vacancies for?
               </h1>
             </legend>
-            <!--<div id="citizenship-conditional-hint" class="govuk-hint">
-              Select all options that are relevant.
-            </div>-->
+          <div id="citizenship-conditional-hint" class="govuk-hint">
+            Add the number of teacher or training vacancies you had against the level
+            </div>
             
             <br><br>
 
