--- a/app/views/prototypes/peter/add.html
+++ b/app/views/prototypes/peter/add.html
@@ -37,7 +37,7 @@
 </h1>
 
             
-<p>Tell us about any full-time, part-time or temporary staff. Don't include agency workers.
+<p>Tell us about any full-time, part-time or temporary staff. 
     </p><br>
 
     <p>We don't use the names of your staff. We ask you to enter them here but this is to help you identify them while you complete this form.
