--- a/app/views/prototypes/peter/filled2.html
+++ b/app/views/prototypes/peter/filled2.html
@@ -38,9 +38,9 @@
                 Were the vacancies filled?
               </h1>
             </legend>
-            <!--<div id="citizenship-conditional-hint" class="govuk-hint">
-              Select all options that are relevant.
-            </div>-->
+            <div id="citizenship-conditional-hint" class="govuk-hint">
+              Add the number of vacancies against the outcome
+            </div>
             
             <br><br>
 
