--- a/app/views/prototypes/peter/answers-provider.html
+++ b/app/views/prototypes/peter/answers-provider.html
@@ -189,7 +189,7 @@
               Filled - English Level 4
             </dt>
             <dd class="govuk-summary-list__value">
-              No
+              No 2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -203,7 +203,7 @@
               Filled - English Level 5
             </dt>
             <dd class="govuk-summary-list__value">
-              Yes - filled temporarily
+              Yes - filled temporarily 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -217,7 +217,7 @@
               Filled - Business Administration Level 3
             </dt>
             <dd class="govuk-summary-list__value">
-              Yes - filled temporarily
+              Yes - filled temporarily 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
