--- a/app/views/prototypes/peter/qualification-type.html
+++ b/app/views/prototypes/peter/qualification-type.html
@@ -52,8 +52,8 @@
       </div>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
-          <label class="govuk-label govuk-radios__label" for="sign-in">
+          <input class="govuk-radios__input" id="radio-teach1" name="choose" type="radio" value="#">
+        <label class="govuk-label govuk-radios__label" for="choose">
             Academic qualifications
 
 
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="sign-in-2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <input class="govuk-radios__input" id="radio-teach2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
             Vocational programmes
 
@@ -75,7 +75,7 @@
         </div>
 
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="sign-in-2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <input class="govuk-radios__input" id="radio-teach3" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
             Other learning programmes
 
@@ -91,9 +91,9 @@
   </div><br><br>
 
 
-          <a href="subject-new" class="govuk-button show-continue" style="display: inline;">
-      Continue
-    </a>
+  <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
+    Continue
+  </a>
        
       </div>
     </div>
