--- a/app/views/prototypes/peter/vocational.html
+++ b/app/views/prototypes/peter/vocational.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What vocational subjects do they teach?
+        What is their main vocational subject area?
       </h1>
     </legend><br>
    
